Update comment for clarity in main.yml

--- a/main.yml
+++ b/main.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           terraform_wrapper: false
 
-      # Run plan by default, or apply on merge.
+      # Run plan by default, or apply on merge test
       - uses: op5dev/tf-via-pr@v13
         with:
           working-directory: path/to/directory
