--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,39 +1,29 @@
-name: Terraform CI/CD
+name: Terraform CI/CD (TF-via-PR)
 
 on:
   pull_request:
-    branches: [ main ]
   push:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
-  id-token: write
+  actions: read
+  checks: write
   contents: read
   pull-requests: write
+  id-token: write
 
 jobs:
   terraform:
-    name: Terraform Pipeline
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v5
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
-
-      - name: Setup TFLint
-        uses: terraform-linters/setup-tflint@v4
-
-      - name: Init TFLint
-        run: tflint --init
-
-      - name: Run TFLint
-        run: tflint
-
-      - name: Checkov Security Scan
-        uses: bridgecrewio/checkov-action@v12
+        with:
+          terraform_wrapper: false   # REQUIRED by tf-via-pr for detailed exit codes
 
       - name: Azure Login via OIDC
         uses: azure/login@v2
@@ -42,23 +32,15 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Terraform Init
-        run: terraform init -backend-config=env/dev.tfbackend
-
-      - name: Terraform Format Check
-        run: terraform fmt -check -diff
-
-      - name: Terraform Validate
-        run: terraform validate
-
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -var-file=env/dev.tfvars
-
-      - name: Comment Plan on PR
-        if: github.event_name == 'pull_request'
-        uses: marocchino/sticky-pull-request-comment@v2
+      # ---------------------------------------------------------
+      # THIS IS THE CRITICAL PART YOU ASKED ABOUT
+      # The OP5dev/tf-via-pr action with all necessary arguments.
+      # ---------------------------------------------------------
+      - name: Terraform via PR (Plan or Apply)
+        uses: op5dev/tf-via-pr@v13
         with:
-          recreate: true
-          message: |
-            ## Terraform Plan
+          working-directory: .
+          # Backend/variable/workspace configs
+          arg-backend-config: env/dev.tfbackend
+          arg-var-file: env/dev.tfvars
+          arg-workspace: dev-use1
